@@ -2,6 +2,7 @@
 
 	* Follow-up for feature #4686: htmlArea RTE Spell Checker: add u modifier to preg_* operations
 	* Follow-up for bug #8232: Creating and editing of fields, forms, etc. in FCE's is impossible if there is a section inside
+	* Fixed issue #2714: In RTE htmlArea, unable to do an internal link with several parameters
 
 2008-08-16  Stanislas Rolland  <typo3@sjbr.ca>
 
